v2.9.4   - RMB->Pixel->Copy pixel value now respects lut and
	   gamma.
	 - Changing volume or audio track now effects both 
	   stereo images.
	 - Bug fixed avi saver to work with images whose
	   resolution was not a multiple of two.
	 - Bug fixed thumbnail creation when image is not
	   a multiple of two.

v2.9.3   - Bug fixed saving of OpenExr files when data window was
	   smaller than display window.  Previously it would crash.
	 - Bug fixed a number of memory leaks.
	 - Bug fixed fit image when in stereo side by side mode.
	 - Bug fixed saving of files in start directory instead of
	   directory set in file requester.
	 - Added support for stereo loading of two set of images
	   or two sets of movie files with a common prefix.  The
	   syntax is a single letter prefix or a full keyword:
	   Examples:
	   	  rootname.prefix.number.extension
		  da20.L.0001.exr
		  da20.R.0001.exr
           For movies:
		  rootname.prefix.extension
		  da20.left.mov
		  da20.right.mov

           In the file requester, the movies and sequences
	   will appear as:
	      	  da20.%v.mov      # for da20.L|R.mov
		  da20.%V.%04d.exr # for da20.left|right.0001.exr

	   The names of left and right and L and R can be changed
	   with environment variables. See documentation.

	   Current Limitations
	   -------------------
	   Currently, it is not possible to mix a movie and a
	   sequence in stereo viewing.
	   It is also not possible to view in stereo channels
	   other than RGBA.
	   Finally, a background image is available for
	   the left eye only.

v2.9.2   - Bug fixed removing a directory from Favorites.
	 - Removed all database functions as noone was using them and
	   they remained under developed.  As a result of this,
	   opening files is much faster now.
	 - Added Unix-like permissions to file details in file 
	   requester.
	 - Made file requester column labels appear translated in 
	   Spanish locale.
	 - Added a Preload Cache option to both the menus (Image)